@@ -17,6 +17,8 @@ Broker:
 Client library:
 - Set minimum keepalive argument to `mosquitto_connect*()` to be 5 seconds.
   Closes #1550.
+- Fix `mosquitto_topic_matches_sub()` not returning MOSQ_ERR_INVAL if the
+  topic contains a wildcard. Closes #1589.
 
 Clients:
 - Fix `--remove-retained` not obeying the `-T` option for filtering out
